<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/app_branding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/app_name"
        android:textAlignment="center" />

    <LinearLayout
        android:id="@+id/hours_minutes_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/hours"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/zero_zero"
            android:inputType="time"
            android:maxLength="2"
            android:textSize="36sp"
            android:nextFocusForward="@id/minutes"/>

        <TextView
            android:id="@+id/hours_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/hours_label" />

        <EditText
            android:id="@+id/minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/zero_zero"
            android:inputType="time"
            android:maxLength="2"
            android:textSize="36sp"
            android:nextFocusForward="@id/input_countdown_message"/>

        <TextView
            android:id="@+id/minutes_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/minutes_label" />

    </LinearLayout>

    <EditText
        android:id="@+id/input_countdown_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/configure_label_hint" />

    <Button
        android:id="@+id/done_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="8dp"
        android:text="@string/done" />

</LinearLayout>