<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    android:theme="@style/Theme.AppCompat.Light">


    <LinearLayout
        android:id="@+id/message_countdown_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/countdown_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autoText="true"
            android:background="@color/lightBackground"
            android:clickable="false"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:padding="8dp"
            android:selectAllOnFocus="false"
            android:text="@string/configure_label_hint"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <LinearLayout
            android:id="@+id/hours_minutes_seconds_container"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/darkBackground"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/hours"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/zero_zero"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/hours_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hours_label_short" />

            <TextView
                android:id="@+id/minutes"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/zero_zero"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/minutes_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minutes_label_short" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>